--- a/html/popup.html
+++ b/html/popup.html
@@ -1,3 +1,6 @@
+<!-- THIS ALL HTML is just for ui in CHROME MENU -->
+<!-- for INJECTED BUTTON html please read at js/inject.js -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,12 +8,13 @@
     <link rel="stylesheet" href="../css/add.css">
   </head>
   <body>
-    <div class="card transition">
+    <div class="card transition">      
+      <!-- HOME -->
       <h2 class="transition">Steam External <br>  Downloader</h2>
-
       <p>If you want request, give feedback, read FAQ, supported games, or anything else <strong>hover me.</strong>
       </p>
-
+      
+      <!-- Hover -->
       <div class="cta-container transition">
       <strong>Currently supported games:</strong><br>
       Cities: Skyline <small>smods.ru</small><br>
